[gd_scene load_steps=6 format=2]

[ext_resource path="res://Script/Popup.gd" type="Script" id=1]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Fonts/noto_sans_ui_bold.ttf"

[sub_resource type="DynamicFont" id=2]
size = 22
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://Fonts/noto_sans_ui_regular.ttf"

[sub_resource type="DynamicFont" id=4]
size = 14
font_data = SubResource( 3 )

[node name="Pop" type="WindowDialog"]
anchor_right = 0.267
anchor_bottom = 0.386
margin_right = 0.23999
margin_bottom = 0.0799866
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
Title_NodePath = NodePath("../Pop/VSplitContainer/VSplitContainer/VSplitContainer/Title_Label")
Info_NodePath = NodePath("../Pop/VSplitContainer/VSplitContainer/VSplitContainer/Info_Label")
Description_NodePath = NodePath("../Pop/VSplitContainer/VSplitContainer/Description_TextEdit")

[node name="VSplitContainer" type="VSplitContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
collapsed = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSplitContainer" type="VSplitContainer" parent="VSplitContainer"]
margin_right = 322.0
margin_bottom = 221.0
size_flags_vertical = 3
split_offset = 5
collapsed = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSplitContainer" type="VSplitContainer" parent="VSplitContainer/VSplitContainer"]
margin_right = 322.0
margin_bottom = 63.0
rect_min_size = Vector2( 0, 50 )
collapsed = true

[node name="Title_Label" type="Label" parent="VSplitContainer/VSplitContainer/VSplitContainer"]
margin_right = 322.0
margin_bottom = 31.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0.529412, 0.529412, 1 )
text = "Title:"

[node name="Info_Label" type="Label" parent="VSplitContainer/VSplitContainer/VSplitContainer"]
margin_top = 43.0
margin_right = 322.0
margin_bottom = 63.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = SubResource( 4 )
text = "A short info about what exactly is going."
autowrap = true

[node name="Description_TextEdit" type="TextEdit" parent="VSplitContainer/VSplitContainer"]
margin_top = 75.0
margin_right = 322.0
margin_bottom = 221.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "A little bit of information about what the user should do."
wrap_enabled = true

[node name="HSplitContainer" type="HSplitContainer" parent="VSplitContainer"]
margin_top = 233.0
margin_right = 322.0
margin_bottom = 258.0
collapsed = true

[node name="Container" type="Container" parent="VSplitContainer/HSplitContainer"]
margin_right = 209.0
margin_bottom = 25.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="OK_Button" type="Button" parent="VSplitContainer/HSplitContainer"]
margin_left = 221.0
margin_right = 322.0
margin_bottom = 25.0
rect_min_size = Vector2( 100, 25 )
text = "Ok"
[connection signal="button_up" from="VSplitContainer/HSplitContainer/OK_Button" to="." method="_on_OK_Button_button_up"]
